--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
-  "name": "next-weather-app",
+  "name": "weather-report",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "next",
+    "build": "next build && next export",
+    "start": "next start"
   },
   "dependencies": {
+    "do": "^0.6.2",
+    "dotenv": "^10.0.0",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "next": "11.1.0",
+    "nprogress": "^0.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-moment": "^1.1.1",
+    "sass": "^1.38.1",
+    "sharp": "^0.29.0",
+    "tenv": "^0.2.3"
   },
   "devDependencies": {
     "eslint": "7.32.0",
